Fixes Slider Arrows Alignment & Spaces issues

--- a/assets/css/services-tab.css
+++ b/assets/css/services-tab.css
@@ -74,6 +74,42 @@
     font-size: 20px;
 }
 
+.service_short_title::before {
+    content: '';
+    width: 50px;
+    height: 2px;
+    background-color: #ECECEC;
+    display: block;
+    margin-right: 10px;
+}
+
+.service_short_title {
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 11.2px;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    transition: 1s;
+}
+
+.service_short_title:hover {
+    transition: 1s;
+    letter-spacing: 0px;
+}
+
+.service_title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.servicer_short_dsec {
+    color: #262626;
+    font-weight: 300;
+    font-size: 16px;
+}
+
 .qodef-horizontal-accordion-showcase .qodef-m-header .qodef-m-title::selection {
     -webkit-text-fill-color: #181818;
 }
@@ -151,7 +187,7 @@
 }
 
 .qodef-horizontal-accordion-showcase .qodef-m-content-left {
-    padding: 15px 7% 0 5%;
+    padding: 15px 5% 0 5%;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -163,6 +199,7 @@
     flex-direction: column;
     padding: 0 10% 0 1.5%;
     width: 50%;
+    justify-content: center;
 }
 
 .item-img {
